# seras-english-knowledge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  manifest.yaml
.claude/: settings.json
docs/: ROADMAP.md  ブレスト_2025-02-03.md  作業ログ.md
mappings/: はじめの英文読解ドリル.yaml
scripts/: restructure_checkpoints.py  (+1 more)
seras-test-generator/: Dockerfile  main.py  pyproject.toml
seras-test-generator/app/: book_registry.py  config.py  main.py  models.py
seras-test-generator/app/routers/: test_generator.py
seras-test-generator/app/services/: data_loader.py  drive_uploader.py  gcs_uploader.py  pdf_generator.py  question_selector.py  section_parser.py  supabase_client.py  supabase_data_store.py
seras-test-generator/app/static/: styles.css
seras-test-generator/app/templates/: answer.html  combined.html  test.html
seras-test-generator/tests/: conftest.py  test_book_registry.py  test_data_loader.py  test_drive_uploader.py  test_integration.py  test_pdf_generator.py  test_question_selector.py  test_section_parser.py  test_supabase_data_store.py
seras-test-generator/tests/fixtures/knowledge/SVの発見/: hsv-001_主語の発見.yaml  hsv-002_述語動詞の発見.yaml
seras-test-generator/tests/fixtures/knowledge/品詞と文型/: strc-001_主要素の定義.yaml  strc-002_5文型の定義.yaml  strc-007_5文型の意味.yaml  strc-008_Mの識別方法.yaml  strc-009_形容詞の2つの役割.yaml
seras-test-generator/tests/fixtures/mappings/: はじめの英文読解ドリル.yaml  肘井の読解のための英文法.yaml  英文法の核心.yaml
seras-test-generator/tests/fixtures/sentences/はじめの英文読解ドリル/: Ch01_01.yaml
seras-test-generator/tests/fixtures/sentences/肘井の読解のための英文法/: Hij_02.yaml  Hij_03.yaml
(+800 files in other folders)
